# vint21h.github.io

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CNAME  Makefile  README.rst  TODO  cv.py  humans.txt  index.html  my.py  package.json  pyproject.toml  resume.json  resume.py  robots.txt  tsconfig.json
.github/: SECURITY.md  dependabot.yml
.github/workflows/: build.yml  check-requirements.yml  check.yml  test.yml
assets/js/: index.ts
html/: resume.html
html/static/: styles.css
resume/: __init__.py  __main__.py  constants.py  exceptions.py  generators.py  outputs.py  resume.py  schemas.py  utils.py
resume/assets/ts/: index.ts
resume/templates/: resume.html  resume.html.jinja
resume/tests/fixtures/: output.html  output.json
static/css/: bootstrap.css  styles.css
static/js/: index.d.ts  index.d.ts.map  index.js  index.js.map  resume.js
tests/: test_generators.py  test_outputs.py  test_resume.py  test_utils.py
tests/fixtures/: output.html
